# heliosv2

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  HERMESAUDIT.md  KIMBERLY_TEST_CHECKLIST.md  LICENSE  NEXT_STEPS.md  README.md  TECHNICAL_REVIEW.md  VALIDATION_EVIDENCE_PACKET_SESSION_REPORT.md  VALIDATION_PROTOCOL.md  config.js  config.live.example.js  index.html  newtrainingdata.txt  package.json  pyproject.toml  railway.toml  repo-manifest.json  requirements-dev.txt  requirements.txt  styles.css  viewer.js
.playwright-mcp/: page-2026-04-21T05-39-16-641Z.yml  page-2026-04-21T05-48-43-474Z.yml  page-2026-04-21T05-51-35-434Z.yml  page-2026-05-28T17-06-15-685Z.yml  page-2026-05-28T18-42-26-635Z.yml  page-2026-05-28T18-43-08-888Z.yml  page-2026-05-28T18-45-37-139Z.yml  page-2026-05-28T21-49-17-311Z.yml  page-2026-05-28T21-53-17-187Z.yml  page-2026-05-28T21-55-36-997Z.yml  page-2026-05-28T21-57-13-919Z.yml  page-2026-05-28T21-59-46-854Z.yml  page-2026-05-28T22-01-50-712Z.yml  page-2026-06-09T18-48-42-423Z.yml  page-2026-06-09T19-00-59-810Z.yml
artifacts/: kimberly-validation-manifest.json  maize_baseline_eval.json  maize_baseline_eval.md  model_metadata.json  moisture_model.pkl
data/: Water_usage_2024.xlsx
docs/: dataset-candidate-evaluation-2026-06-21.md  helios-architecture.md  helios-dataset-outreach.md  how-to-run-helios.md  maize-2008-2011-acquisition-audit.md  public-dataset-ingestion.md  render_dataset_outreach_pdf.py
helios/: __init__.py  config.py
notebooks/: helios_demo.ipynb
src/: api.js  constants.js  domain.js  state.js  ui.js  (+1 more)
(+110 files in other folders)
